# neural-compression

./: .gitignore  README.md  main.py  proposal.tex  pyproject.toml
datasets/: __init__.py  time_series_text_dataset.py
datasets/helper_functions/: __init__.py  transformations.py
framework/: evaluate_model.py  train_model.py
framework/models/: __init__.py  baseline.py  edgecodec.py  uni_edgecodec.py
framework/models/decoders/: __init__.py  base.py  edgecodec_decoder.py  gru_decoder.py
framework/models/encoders/: __init__.py  base.py  cnn.py  edgecodec_encoder.py  resnet.py  tcn.py
framework/models/quantizers/: __init__.py  base.py  rvq_quantizer.py  signal_adaptive_vq.py
framework/runner/: __init__.py  base.py
framework/training/: __init__.py  base.py  compression.py  edgecodec_training.py  task_aware_edgecodec_training.py  uni_edgecodec_training.py
framework/utils/: __init__.py  factories.py  training_args.py
includes/: 1-introduction.tex  2-context.tex  2-problem-and-context.tex  2-problem.tex  3-background.tex  3-context.tex  3-goals-and-challenges.tex  3-problem.tex  4-approach.tex  4-gaps.tex  4-goals-and-challenges.tex  5-approach.tex  5-goals-and-challenges.tex  5-motivation.tex  6-approach.tex  7-goals-and-challenges.tex  references.bib
neural_compression.egg-info/: PKG-INFO  SOURCES.txt
notes/: abstract.md  argument_chain_sources.md  literature.md  project_plan.md  proposal.md  tant_plan.md
use_cases/: edgecodec.yaml  ta_edgecodec.yaml  tcn_rnn.yaml  uni_edgecodec.yaml
